[Feat] app 개발